feat: add controls

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,13 @@
         Score: <span class="game__points" data-score>0</span>
       </h1>
       <canvas class="game__canvas" id="canvas"></canvas>
+
+      <div class="game__controls controls" data-controls>
+        <button class="controls__left" data-direction="left">🠔</button>
+        <button class="controls__up" data-direction="up">🠕</button>
+        <button class="controls__right" data-direction="right">🠖</button>
+        <button class="controls__down" data-direction="down">🠗</button>
+      </div>
     </div>
   </body>
 </html>
